[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/DungeonEditor.gd" type="Script" id=1]
[ext_resource path="res://objects/camera/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://themes/DungeonFalls_Core.tres" type="Theme" id=3]
[ext_resource path="res://scripts/UI/MapEditor/TilesetSelection.gd" type="Script" id=4]
[ext_resource path="res://scripts/UI/MapEditor/FloorTools.gd" type="Script" id=5]
[ext_resource path="res://scripts/UI/MapEditor/FloorList.gd" type="Script" id=6]
[ext_resource path="res://scripts/DungeonEditor_Floors.gd" type="Script" id=7]
[ext_resource path="res://scripts/DungeonEditor_PlayerStart.gd" type="Script" id=8]
[ext_resource path="res://scripts/UI/MapEditor/SliderLabelValue.gd" type="Script" id=9]
[ext_resource path="res://scripts/UI/MapEditor/EntryBoxValue.gd" type="Script" id=10]
[ext_resource path="res://objects/UI/ConfirmPopup.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/graphics/editor/Editor_Button_Icons.png" type="Texture" id=12]
[ext_resource path="res://objects/UI/DungeonList.tscn" type="PackedScene" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 12 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 12 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 12 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 64, 64 )

[node name="DungeonEditor" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="FloorEditor" type="Node" parent="."]
script = ExtResource( 7 )

[node name="PlayerStartEditor" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Perma_Objects" type="Node2D" parent="."]
pause_mode = 1
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Camera" parent="Perma_Objects" instance=ExtResource( 2 )]
current = false

[node name="DungeonView" type="ViewportContainer" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Port" type="Viewport" parent="DungeonView"]
size = Vector2( 480, 270 )
size_override_stretch = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 1
render_target_update_mode = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="EditorUI" type="MarginContainer" parent="CanvasLayer"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.94043
margin_right = 4.94043
mouse_filter = 2
theme = ExtResource( 3 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/EditorUI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 236.0
size_flags_vertical = 0
custom_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/EditorUI/VBoxContainer"]
margin_right = 1900.0
margin_bottom = 168.331
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer"]
margin_left = 15.2862
margin_top = 15.5567
margin_right = 1884.58
margin_bottom = 151.557

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 932.0
margin_bottom = 136.0
size_flags_horizontal = 3

[node name="TilesetSelection" type="MenuButton" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 932.0
margin_bottom = 39.2487
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Text to see"
clip_text = true
align = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 932.0
margin_bottom = 125.0

[node name="BTN_NewDungeon" type="Button" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 82.6343
margin_bottom = 82.2487
icon = SubResource( 1 )

[node name="BTN_LoadDungeon" type="Button" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 168.634
margin_bottom = 82.2487
icon = SubResource( 2 )

[node name="BTN_SaveDungeon" type="Button" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 254.634
margin_bottom = 82.2487
icon = SubResource( 3 )

[node name="FloorTools" type="VBoxContainer" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 936.0
margin_right = 1869.0
margin_bottom = 136.0
size_flags_horizontal = 3
script = ExtResource( 5 )

[node name="Top" type="HBoxContainer" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools"]
margin_right = 933.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/Top"]
margin_top = 14.0
margin_right = 44.0
margin_bottom = 35.0
text = "Floors:"

[node name="RandBox" type="HBoxContainer" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/Top"]
margin_left = 48.0
margin_right = 182.0
margin_bottom = 50.0

[node name="Check" type="CheckBox" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/Top/RandBox"]
margin_right = 50.6343
margin_bottom = 50.2487
flat = true

[node name="Label" type="Label" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/Top/RandBox"]
margin_left = 54.0
margin_top = 14.0
margin_right = 134.0
margin_bottom = 35.0
text = "( Random )"

[node name="CTRLs" type="HBoxContainer" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools"]
margin_top = 54.0
margin_right = 933.0
margin_bottom = 136.0

[node name="BTN_Breakable" type="Button" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs"]
margin_right = 82.6343
margin_bottom = 82.2487
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
icon = SubResource( 4 )

[node name="BTN_Safe" type="Button" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs"]
margin_left = 86.0
margin_right = 168.634
margin_bottom = 82.2487
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
icon = SubResource( 5 )

[node name="BTN_Ends" type="Button" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs"]
margin_left = 172.0
margin_right = 254.634
margin_bottom = 82.2487
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
icon = SubResource( 6 )

[node name="BTN_Player_Start" type="Button" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs"]
margin_left = 258.0
margin_right = 340.634
margin_bottom = 82.2487
toggle_mode = true
icon = SubResource( 7 )

[node name="BTN_MapSettings" type="Button" parent="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs"]
margin_left = 344.0
margin_right = 426.634
margin_bottom = 82.2487
toggle_mode = true
icon = SubResource( 8 )

[node name="FloorList" type="PanelContainer" parent="CanvasLayer/EditorUI/VBoxContainer"]
margin_top = 178.0
margin_right = 46.7077
margin_bottom = 226.331
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margins" type="MarginContainer" parent="CanvasLayer/EditorUI/VBoxContainer/FloorList"]
margin_left = 15.2862
margin_top = 15.5567
margin_right = 31.2862
margin_bottom = 31.5567
mouse_filter = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Scroll" type="ScrollContainer" parent="CanvasLayer/EditorUI/VBoxContainer/FloorList/Margins"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1

[node name="Tiles" type="VBoxContainer" parent="CanvasLayer/EditorUI/VBoxContainer/FloorList/Margins/Scroll"]
custom_constants/separation = 24

[node name="DungeonSettingsUI" type="Panel" parent="CanvasLayer"]
visible = false
margin_left = 655.0
margin_top = 242.0
margin_right = 1905.0
margin_bottom = 1063.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margins" type="MarginContainer" parent="CanvasLayer/DungeonSettingsUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/DungeonSettingsUI/Margins"]
margin_right = 1230.0
margin_bottom = 801.0
custom_constants/vseparation = 0
custom_constants/hseparation = 20
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left Column" type="VBoxContainer" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer"]
margin_right = 396.0
margin_bottom = 801.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DungeonName" type="HBoxContainer" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Left Column"]
margin_right = 396.0
margin_bottom = 37.0
size_flags_horizontal = 3
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
db_name = "Editor"
db_val_key = "dungeon_name"

[node name="Label" type="Label" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Left Column/DungeonName"]
margin_top = 8.0
margin_right = 120.0
margin_bottom = 29.0
text = "Dungeon Name: "

[node name="Value" type="LineEdit" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Left Column/DungeonName"]
margin_left = 124.0
margin_right = 396.0
margin_bottom = 37.0
size_flags_horizontal = 3
max_length = 255
placeholder_text = "Enter name"

[node name="Center Column" type="VBoxContainer" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer"]
margin_left = 416.0
margin_right = 812.0
margin_bottom = 801.0
size_flags_horizontal = 3

[node name="BreakTime" type="VBoxContainer" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Center Column"]
margin_right = 396.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Center Column/BreakTime"]
margin_right = 396.0
margin_bottom = 21.0
text = "Tile Break Time:"

[node name="Slider" type="HBoxContainer" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Center Column/BreakTime"]
margin_top = 25.0
margin_right = 396.0
margin_bottom = 46.0
script = ExtResource( 9 )
db_name = "Editor"
db_val_key = "tile_break_time"
Label_Postfix = " second(s)"
Value_Decimal_Padding = 1

[node name="Value" type="HSlider" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Center Column/BreakTime/Slider"]
margin_right = 303.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Label" type="Label" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Center Column/BreakTime/Slider"]
margin_left = 307.0
margin_right = 396.0
margin_bottom = 21.0
text = "1.0 second(s)"

[node name="Right Column" type="VBoxContainer" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer"]
margin_left = 832.0
margin_right = 1228.0
margin_bottom = 801.0
size_flags_horizontal = 3

[node name="BreakVariance" type="VBoxContainer" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Right Column"]
margin_right = 396.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Right Column/BreakVariance"]
margin_right = 396.0
margin_bottom = 21.0
text = "Tile Break Variance:"

[node name="Slider" type="HBoxContainer" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Right Column/BreakVariance"]
margin_top = 25.0
margin_right = 396.0
margin_bottom = 46.0
script = ExtResource( 9 )
db_name = "Editor"
db_val_key = "tile_break_variance"
Label_Postfix = " second(s)"
Value_Decimal_Padding = 1
db_val_to_max = "tile_break_time"

[node name="Value" type="HSlider" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Right Column/BreakVariance/Slider"]
margin_right = 300.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[node name="Label" type="Label" parent="CanvasLayer/DungeonSettingsUI/Margins/GridContainer/Right Column/BreakVariance/Slider"]
margin_left = 304.0
margin_right = 396.0
margin_bottom = 21.0
text = "0.0 second(s)"

[node name="ConfirmPopup" parent="CanvasLayer" instance=ExtResource( 11 )]
margin_left = 527.412
margin_top = 465.049
margin_right = -777.588
margin_bottom = -474.951

[node name="DungeonLoadPopup" type="PopupPanel" parent="CanvasLayer"]
margin_left = 664.0
margin_top = 232.0
margin_right = 1146.0
margin_bottom = 794.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="DungeonList" parent="CanvasLayer/DungeonLoadPopup" instance=ExtResource( 13 )]
margin_left = 8.36018
margin_top = 8.36018
margin_right = -8.56409
margin_bottom = -8.56409
[connection signal="pressed" from="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/BTN_LoadDungeon" to="." method="_on_rquestdungeonload_pressed"]
[connection signal="active_floor_type" from="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools" to="." method="_on_active_floor_type"]
[connection signal="toggled" from="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/Top/RandBox/Check" to="." method="_on_random_floor"]
[connection signal="toggled" from="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs/BTN_Breakable" to="CanvasLayer/EditorUI/VBoxContainer/FloorList" method="_on_floor_btn_toggle" binds= [ "B" ]]
[connection signal="toggled" from="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs/BTN_Breakable" to="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools" method="_on_floor_btn_toggle" binds= [ "B" ]]
[connection signal="toggled" from="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs/BTN_Safe" to="CanvasLayer/EditorUI/VBoxContainer/FloorList" method="_on_floor_btn_toggle" binds= [ "S" ]]
[connection signal="toggled" from="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs/BTN_Safe" to="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools" method="_on_floor_btn_toggle" binds= [ "S" ]]
[connection signal="toggled" from="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs/BTN_Ends" to="CanvasLayer/EditorUI/VBoxContainer/FloorList" method="_on_floor_btn_toggle" binds= [ "E" ]]
[connection signal="toggled" from="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs/BTN_Ends" to="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools" method="_on_floor_btn_toggle" binds= [ "E" ]]
[connection signal="toggled" from="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs/BTN_Player_Start" to="." method="_on_player_start"]
[connection signal="toggled" from="CanvasLayer/EditorUI/VBoxContainer/PanelContainer/HBoxContainer/FloorTools/CTRLs/BTN_MapSettings" to="." method="_on_map_settings_toggled"]
[connection signal="tile_selected" from="CanvasLayer/EditorUI/VBoxContainer/FloorList" to="." method="_on_tile_selected"]
[connection signal="cancel" from="CanvasLayer/ConfirmPopup" to="." method="_on_ConfirmPopup_cancel"]
[connection signal="cancel" from="CanvasLayer/DungeonLoadPopup/DungeonList" to="." method="_on_dungeonload_cancel"]
[connection signal="load_dungeon" from="CanvasLayer/DungeonLoadPopup/DungeonList" to="." method="_on_loaddungeonfresh_dungeon"]
